# kuri

./: .gitignore  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/workflows/: ci.yml
docs/: LOGGING.md
examples/: Cargo.toml  README.md
examples/src/: 01_readme_example.rs  01_simple_calculator_tool_server.rs  02_stateful_counter_tool_server.rs  03_prompt_server.rs  04_hyper_middleware.rs
kuri/: CHANGELOG.md  Cargo.toml
kuri/src/: context.rs  errors.rs  handler.rs  id.rs  lib.rs  response.rs  serve.rs  server.rs  service.rs  service_ext.rs
kuri/src/middleware/: mod.rs  tracing.rs
kuri/src/transport/: byte_transport.rs  mod.rs  stdio.rs
kuri/tests/: errors.rs  general.rs  integration_tests.rs  prompts.rs  tools.rs
kuri/tests/common/: mod.rs
kuri_macros/: CHANGELOG.md  Cargo.toml
kuri_macros/src/: lib.rs  prompt.rs  tool.rs
kuri_mcp_protocol/: CHANGELOG.md  Cargo.toml  README.md
kuri_mcp_protocol/src/: content.rs  jsonrpc.rs  lib.rs  messages.rs  prompt.rs  resource.rs  tool.rs
