[package]
name = "examples"
edition = "2024"
publish = false

[dependencies]
kuri = { workspace = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
async-trait = "0.1"
anyhow = "1.0"
tempfile = "3.19"
tower = "0.5"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
rand = "0.8"
tokio-util = { version = "0.7", features = ["io", "codec"] }

[[example]]
name = "01_simple_calculator_tool_server"
path = "src/01_simple_calculator_tool_server.rs"

[[example]]
name = "02_stateful_counter_tool_server"
path = "src/02_stateful_counter_tool_server.rs"

[[example]]
name = "03_prompt_server"
path = "src/03_prompt_server.rs"

[[example]]
name = "04_hyper_middleware"
path = "src/04_hyper_middleware.rs"
